scode/teamRAM/prob7/error.txt
  File "/var/www/html/scode/teamRAM/prob7/main.py", line 35
    if
      ^
SyntaxError: invalid syntax
